--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=7.2",
-        "ext-swoole": ">=4.4"
+        "ext-swoole": ">=4.4",
+        "xxx/yyy": "dev-master"
 
     },
     "suggest": {
